examples/test/testpolicy7393.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7393
  namespace: namespace277
spec:
  podSelector:
    matchLabels:
      key24: value19
      key29: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value5
          key46: value29
      podSelector:
        matchLabels:
          key8: value29
